--- a/layout/Layout/Layout.module.scss
+++ b/layout/Layout/Layout.module.scss
@@ -4,7 +4,7 @@
 .main {
   position: relative;
   margin: 0 auto;
-  padding: 4rem 2vw;
+  padding: 4rem 2vw 3rem;
   min-height: calc(100vh - 3rem);
   width: 100%;
   min-width: $mq-xs;
