--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,28 +3,17 @@
 @import '@/styles/_mixins.scss';
 @import '@/styles/_functions.scss';
 @import '@/styles/_initial.scss';
-// @import './_mixins';
-// @import './_functions';
-// @import './_global';
-// @import './_header';
-// @import './_footer';
-// @import './index'; // use separate files for sections
+
 body {
   margin: 0 auto;
   height: 100%;
+  min-height: 100vh;
   padding: 0;
-  display: flex;
-  flex-direction: column;
   background-color: $dark;
   color: $light;
   scroll-behavior: smooth;
   font-size: $html-font-size;
   font-family: $font-text;
-}
-
-main {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 a:focus {
