--- a/components/SvgIcon/SvgIcon.module.scss
+++ b/components/SvgIcon/SvgIcon.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/_variables.scss';
 @import '@/styles/_mixins.scss';
-@import '@/styles/_initial.scss';
+// @import '@/styles/_initial.scss';
 
 .icon__svg {
 	margin: $offset-basic;
