total refactoring + add todos

--- a/components/SvgIcon/SvgIcon.module.scss
+++ b/components/SvgIcon/SvgIcon.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/_variables.scss';
 @import '@/styles/_mixins.scss';
 // @import '@/styles/_initial.scss';
-
+//todo put all styles about svg icons here
 .icon__svg {
 	margin: $offset-basic;
 	display: block;
