--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,7 @@
 @import '@/styles/_firtstNull.scss';
 @import '@/styles/_variables.scss';
 @import '@/styles/_mixins.scss';
-@import '@/styles/_functions.scss';
-@import '@/styles/_initial.scss';
+@import '@/styles/_initial.scss'; // todo delete after move all classes
 
 body {
   margin: 0 auto;
