upd unused styles cleanup

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,6 @@
-@import '@/styles/_firtstNull.scss';
+@import '@/styles/_firstNull.scss';
 @import '@/styles/_variables.scss';
 @import '@/styles/_mixins.scss';
-@import '@/styles/_initial.scss'; // todo delete after move all classes
 
 body {
   margin: 0 auto;
