--- a/components/SvgIcon/SvgIcon.module.scss
+++ b/components/SvgIcon/SvgIcon.module.scss
@@ -1,7 +1,6 @@
 @import '@/styles/_variables.scss';
 @import '@/styles/_mixins.scss';
-// @import '@/styles/_initial.scss';
-//todo put all styles about svg icons here
+
 .icon__svg {
 	margin: $offset-basic;
 	display: block;
@@ -30,5 +29,16 @@
 	@include media-xl {
 		height: 100px;
 		width: 100px;
+	}
+}
+
+
+.icon__small {
+	height: 25px;
+	width: 25px;
+
+	@include media-lg {
+		width: 50px;
+		height: 50px;
 	}
 }
